--- a/Assignment 1 Bad Bunnies.ipynb
+++ b/Assignment 1 Bad Bunnies.ipynb
@@ -46,6 +46,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16ed47ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "282f0b7e-7d9e-4774-abaf-23d59ff99d3f",
    "metadata": {},
@@ -69,9 +77,7 @@
    "id": "9dfacf01-c8c2-4d62-b0ac-ee1009bf78ba",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -87,7 +93,9 @@
    "id": "9d78d952-519f-42e0-ace2-5ba12478f0fc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -95,7 +103,9 @@
    "id": "d7d422ce-0046-432b-a884-10233af15783",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,7 +153,9 @@
    "id": "8ea27bba-477b-4bc5-a540-ba014fbf5592",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "top_townships = df['twp'].value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "code",
@@ -151,7 +163,9 @@
    "id": "f44aff63-f8df-40d0-a00d-4dfe2e5740aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Top 5 townships for 911 calls: \\n\", top_townships)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,7 +183,9 @@
    "id": "8ef988fb-5e4e-4a2e-86e5-aa1b4a9960c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['Reason'] = df['title'].apply(lambda x: x.split(':')[0])"
+   ]
   },
   {
    "cell_type": "code",
@@ -193,7 +209,10 @@
    "id": "bf4d0c04-aea0-4db8-b1c8-e642dcff3702",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "most_common_reason = df['Reason'].value_counts().idxmax()\n",
+    "print(f\"\\nMost Common Reason for 911 Calls: {most_common_reason}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -217,7 +236,12 @@
    "id": "519bda46-cbee-4eb2-887d-b968baa0b4f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.countplot(x='Reason', data=df, palette='viridis')\n",
+    "plt.title('Number of 911 Calls by Reason')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -241,7 +265,9 @@
    "id": "5dba3854-4c7c-43e1-9098-49e569b897dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['timeStamp'] = pd.to_datetime(df['timeStamp'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -272,7 +298,11 @@
    "id": "742a4728-84fc-4419-bec1-506719b87ecf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['Hour'] = df['timeStamp'].apply(lambda time: time.hour)\n",
+    "df['Month'] = df['timeStamp'].apply(lambda time: time.month)\n",
+    "df['Day of Week'] = df['timeStamp'].apply(lambda time: time.dayofweek)"
+   ]
   },
   {
    "cell_type": "code",
@@ -300,7 +330,10 @@
    "id": "a744efe8-6432-41cd-a9f9-9f2b99ebcbf4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "day_map = {0: 'Monday', 1: 'Tuesday', 2: 'Wednesday', 3: 'Thursday', 4: 'Friday', 5: 'Saturday', 6: 'Sunday'}\n",
+    "df['Day of Week'] = df['Day of Week'].map(day_map)"
+   ]
   },
   {
    "cell_type": "code",
@@ -324,7 +357,13 @@
    "id": "850fadf9-85fe-4cdb-b23d-8281cdc1390e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.countplot(x='Day of Week', data=df, hue='Reason', palette='viridis')\n",
+    "plt.title('Number of 911 Calls by Day of Week and Reason')\n",
+    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -348,7 +387,13 @@
    "id": "00584ef6-8e2c-4e97-bb68-e36466763002",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.countplot(x='Month', data=df, hue='Reason', palette='viridis')\n",
+    "plt.title('Number of 911 Calls by Month and Reason')\n",
+    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "plt.show()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -372,7 +417,9 @@
    "id": "449e7d2e-bd88-4955-9100-28fb68216b21",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "byMonth = df.groupby('Month').count()"
+   ]
   },
   {
    "cell_type": "code",
@@ -396,7 +443,14 @@
    "id": "d19a6918-a5ba-41fc-a1bc-8ee11bfabf05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "byMonth['lat'].plot()\n",
+    "plt.title('Number of 911 Calls per Month')\n",
+    "plt.xlabel('Month')\n",
+    "plt.ylabel('Number of Calls')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -420,7 +474,11 @@
    "id": "ae781aab-56dd-4b36-8e51-5410e0173784",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.lmplot(x='Month', y='lat', data=byMonth.reset_index())\n",
+    "plt.title('Trend in Number of 911 Calls per Month')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -450,7 +508,9 @@
    "id": "2955a17b-27ee-44fb-b5eb-446e0a2dae69",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dayHour = df.groupby(['Day of Week', 'Hour']).count()['Reason'].unstack()"
+   ]
   },
   {
    "cell_type": "code",
@@ -474,7 +534,12 @@
    "id": "4fc33df6-dc2e-4e8b-9c4b-961bd12796d2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.heatmap(dayHour, cmap='viridis')\n",
+    "plt.title('Heatmap of 911 Calls by Day of Week and Hour')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -504,7 +569,9 @@
    "id": "997a5084-91ae-4bea-9040-4de01aa12d31",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dayMonth = df.groupby(['Day of Week', 'Month']).count()['Reason'].unstack()"
+   ]
   },
   {
    "cell_type": "code",
@@ -512,7 +579,12 @@
    "id": "e21fd9da-cb1d-40d0-9237-697bf41667f6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.heatmap(dayMonth, cmap='viridis')\n",
+    "plt.title('Heatmap of 911 Calls by Day of Week and Month')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
